@@ -1,4 +1,9 @@
 2/25/2006 Bob Rossi <bob@brasko.net>
+
+	* src/highlight_groups.c: Fixed comments, and spelling errors.
+
+2/25/2006 Bob Rossi <bob@brasko.net>
+
 	* include/highlight_groups.h (hl_group_kind): Remove HLG_UI_LABEL and
 	HLG_FILEDLG_FILENUM enumeration values.
 	* src/highlight_groups.c (default_groups_for_curses): Remove
@@ -14,12 +19,15 @@
 	* include/helptext.h: Autogenerated.
 
 2/24/2006 Bob Rossi <bob@brasko.net>
+
 	* src/logo.c (usage): Modify logo usage again.
 
 2/24/2006 Bob Rossi <bob@brasko.net>
+
 	* src/interface.c: Used indent on file.
 
 2/24/2006 Bob Rossi <bob@brasko.net>
+
 	* src/logo.c (usage): Modify logo usage.
 
 2/23/2006 Bob Rossi <bob@brasko.net>
